[gd_scene load_steps=2 format=3 uid="uid://dkkbhv8bkjbtu"]

[ext_resource type="Script" path="res://main.gd" id="1_dwm7u"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dwm7u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="RussianDefault" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Russian Default"

[node name="EnglishDefault" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "English Default"

[node name="Table" type="TextEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Table"
highlight_all_occurrences = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OptionButton" type="OptionButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Encode"
popup/item_1/text = "Decode"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="OriginalText" type="TextEdit" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Original text"
wrap_mode = 1
highlight_all_occurrences = true

[node name="ProcessedText" type="TextEdit" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Processed text"
wrap_mode = 1
highlight_all_occurrences = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/RussianDefault" to="." method="_on_russian_default_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/EnglishDefault" to="." method="_on_english_default_pressed"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/VBoxContainer/Table" to="." method="_on_table_text_changed"]
[connection signal="text_set" from="MarginContainer/HBoxContainer/VBoxContainer/Table" to="." method="_on_table_text_set"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/OriginalText" to="." method="_on_original_text_text_changed"]
